Listing title displaying sanitized for title attribute - ADDED
CSV upload not dealing with line breaks in fields - FIXED
ADDRESS_MSG can't be translated because it contains HTML tags - FIXED
CSS files minified and added to one file for frontend - CHANGED
JS files minified for the frontend - CHANGED
In Best of widget listings "Best of" text not translatable - FIXED

v1.4.3
In the map child categories should be checked/unchecked when parent category is checked/unchecked - FIXED
Sorting by title not working correctly - FIXED
Added $post_id param to action 'geodir_update_postrating' - ADDED
Removed preview button from backend for GD posts - CHANGED

v1.4.2
Google api establishment term can override street address - FIXED
Added action geodir_infowindow_meta_after to infowindow - ADDED
On home page map css class added to highlight searched post type - FIXED
Popular category count not working with ajax - FIXED
In backend geodirectory style conflicts with some themes style - FIXED
Sort by most reviews not working in widget and shortcode popular post view - FIXED
Validation added for custom permalinks in GD -> General -> Permalinks - FIXED
All Listings virtual page removed - CHANGED
Shortcode added for best of widget - ADDED
Recent reviews widget ratings stars color not changed with multirating color setting - FIXED
geodir_curPageURL() changed slightly for https url's, we no longer add the port number - CHANGED
Shortcode added for to display GeoDirectoy Listings with pagination - ADDED
Marker cluster not working in maps added via shortcode - FIXED
Add to fav/remove from fav text now filterable - ADDED
Awesome font upgraded with new Awesome font version 4.3.0 - ADDED
After searching for a city not able to search city again without clearing Near input box - FIXED
Custom fields texts translation added - FIXED
[#from_email#] added as a shortcode in notification templates - ADDED
Changed hook 'template_include' to priority 9 - CHANGED

v1.4.1